--- a/locale/en/ScanArea-en.cfg
+++ b/locale/en/ScanArea-en.cfg
@@ -1,18 +1,21 @@
+[controls]
+ScanArea-input=Scan
+
 [item-name]
 ScanArea-tool=Scan Area tool
 
 [mod-setting-name]
-ScanArea-limit-size=Limited scan size
+ScanArea-limit-size=Limit area
 
 [mod-setting-description]
-ScanArea-limit-size=By default, Scan Area doesn't allow areas larger than roughly 100x100 chunks to be scanned, as they may cause the game to freeze. Disable this setting to allow scans of any size.
+ScanArea-limit-size=By default, Scan Area doesn't allow areas larger than roughly 100x100 chunks to be scanned. Disable this setting to allow scans of any size.
 
 [shortcut-name]
-ScanArea-shortcut=Chart an area of the map, or unchart by holding Shift.
+ScanArea-shortcut=Scan Area (__CONTROL__ScanArea-input__)
 
 [ScanArea]
-requires-satellite=[img=item/satellite] You must launch a satellite to use the Scan Area tool.
-use-map-view=[img=item/satellite] The Scan Area tool works best when used from the map view.
-bad-surface=[img=item/satellite] Can only scan planet and moon surfaces.
+requires-satellite=[img=item/satellite] You must launch a satellite first.
+use-map-view=[img=item/satellite] Use the scan tool from the map to scan larger areas.
+bad-surface=[img=item/satellite] Cannot use the scanner on this surface.
 out-of-bounds=[img=item/satellite] There's a star. There's another one. Star. Star star star. Star.
 too-big=[img=item/satellite] Scanning that large of an area could cause the game to freeze. Try a smaller area, or disable "__1__" in mod settings.
